@@ -15,6 +15,11 @@ S <mave> comment goes here
     'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
 ==== End of Legend ====
 
+    ==> 285 - 30/05/2008 - 1.1.4 release <==
+
+B <mave> resolved bug in saving of RealMat on XML file
+B <mave> resolved bug in skipList when saving on XML file
+
     ==> 280 - 13/05/2008 - 1.1.3 release <==
 
 C <mave> prettyfied printing of RealMat on XML file
